--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@types/react-qr-reader": "^2.1.7",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.14.15",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
