--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-qr-reader": "^2.1.7",
     "@yudiel/react-qr-scanner": "^2.0.8",
+    "axios": "^1.7.4",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
